--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>Título da página</title>
+<title>Fanpage do Floquinhos</title>
 
 <meta charset=“utf-8”>
 
@@ -12,7 +12,9 @@
 
 <body>
 
-<h1>Aqui vai um título</h1>
+<h1>Perfil #Floquinhos</h1>
+
+<img src="imagens/Floquinho.webp" />
 
 </body>
 
